tests/golden/diagnostics/parse.txt
error[NQ-PARSE-003]: expected `;` after return
  --> diag_parse.nq:3:1
   | }
   | ^
